@@ -1,5 +1,6 @@
 package com.example.fraud_orchestrator.service;
 
+import java.math.BigDecimal;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.Collections;
@@ -11,11 +12,13 @@ import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.stereotype.Service;
 
+import com.example.fraud_orchestrator.entity.FraudDecisionRecord;
 import com.example.fraud_orchestrator.event.BlacklistCheckEvent;
 import com.example.fraud_orchestrator.event.FraudDecision;
 import com.example.fraud_orchestrator.event.FraudFinalDecisionEvent;
 import com.example.fraud_orchestrator.event.MlScoreEvent;
 import com.example.fraud_orchestrator.event.RuleEvaluationEvent;
+import com.example.fraud_orchestrator.repository.FraudDecisionRepository;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
@@ -23,167 +26,213 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 public class FraudOrchestrationService {
 
     private static final String OUT_TOPIC = "fraud.final";
-    private static final Duration AGGREGATION_TTL = Duration.ofSeconds(5);
+    private static final Duration AGGREGATION_TTL = Duration.ofSeconds(15);
 
+    private static final String FIELD_BLACKLIST_HIT = "blacklistHit";
+    private static final String FIELD_BLACKLIST_REASON = "blacklistReason";
     private static final String FIELD_RULE_SCORE = "ruleScore";
+    private static final String FIELD_RULE_BAND = "ruleBand";
     private static final String FIELD_RULE_MATCHES = "ruleMatches";
-    private static final String FIELD_BLACKLIST_SCORE = "blacklistScore";
-    private static final String FIELD_BLACKLIST_MATCHES = "blacklistMatches";
+    private static final String FIELD_RULE_VERSION = "ruleVersion";
     private static final String FIELD_ML_SCORE = "mlScore";
+    private static final String FIELD_MODEL_VERSION = "modelVersion";
+    private static final String FIELD_FEATURES = "featuresJson";
     private static final String FIELD_SENDER_USER_ID = "senderUserId";
     private static final String FIELD_RECEIVER_USER_ID = "receiverUserId";
     private static final String FIELD_MERCHANT_ID = "merchantId";
     private static final String FIELD_AMOUNT = "amount";
     private static final String FIELD_CURRENCY = "currency";
-    private static final String FIELD_RISK_SCORE = "riskScore";
-    private static final String FIELD_RISK_LEVEL = "riskLevel";
-    private static final String FIELD_TRIGGERED_RULES = "triggeredRules";
-    private static final String FIELD_HARD_STOP_MATCHES = "hardStopMatches";
-    private static final String FIELD_HARD_STOP_DECISION = "hardStopDecision";
+    private static final String FIELD_COUNTRY = "country";
 
     private final StringRedisTemplate redisTemplate;
     private final KafkaTemplate<String, FraudFinalDecisionEvent> kafkaTemplate;
+    private final FraudDecisionRepository decisionRepository;
     private final ObjectMapper objectMapper;
 
     public FraudOrchestrationService(
             StringRedisTemplate redisTemplate,
             KafkaTemplate<String, FraudFinalDecisionEvent> kafkaTemplate,
+            FraudDecisionRepository decisionRepository,
             ObjectMapper objectMapper
     ) {
         this.redisTemplate = redisTemplate;
         this.kafkaTemplate = kafkaTemplate;
+        this.decisionRepository = decisionRepository;
         this.objectMapper = objectMapper;
     }
 
-    public void handleRuleEvent(RuleEvaluationEvent event) {
-        String key = aggregateKey(event.getTransactionId());
+    public void handleBlacklistEvent(BlacklistCheckEvent event) {
+        String transactionId = event.getTransactionId();
+        if (transactionId == null) {
+            return;
+        }
+
+        Map<String, Object> transaction = event.getTransaction();
+        if (transaction != null) {
+            storeTransactionSnapshot(transactionId, transaction);
+        }
+
+        if (event.isBlacklistHit()) {
+            finalizeDecision(transactionId, FinalDecisionInput.fromBlacklist(event));
+            return;
+        }
+
         HashOperations<String, Object, Object> hashOps = redisTemplate.opsForHash();
+        String key = aggregateKey(transactionId);
+        hashOps.put(key, FIELD_BLACKLIST_HIT, "false");
+        storeIfPresent(hashOps, key, FIELD_BLACKLIST_REASON, event.getReason());
+        redisTemplate.expire(key, AGGREGATION_TTL);
+    }
+
+    public void handleRuleEvent(RuleEvaluationEvent event) {
+        String transactionId = event.getTransactionId();
+        if (transactionId == null) {
+            return;
+        }
+
+        Map<String, Object> features = event.getFeatures();
+        if (features != null) {
+            storeTransactionSnapshot(transactionId, features);
+        }
+
+        HashOperations<String, Object, Object> hashOps = redisTemplate.opsForHash();
+        String key = aggregateKey(transactionId);
         hashOps.put(key, FIELD_RULE_SCORE, String.valueOf(event.getRuleScore()));
-        hashOps.put(key, FIELD_RULE_MATCHES, serializeList(event.getMatchedRules()));
-        hashOps.put(key, FIELD_RISK_SCORE, String.valueOf(event.getRiskScore()));
-        hashOps.put(key, FIELD_RISK_LEVEL, event.getRiskLevel());
-        hashOps.put(key, FIELD_TRIGGERED_RULES, serializeList(event.getTriggeredRules()));
-        hashOps.put(key, FIELD_HARD_STOP_MATCHES, serializeList(event.getHardStopMatches()));
-        storeIfPresent(hashOps, key, FIELD_HARD_STOP_DECISION, event.getHardStopDecision());
+        storeIfPresent(hashOps, key, FIELD_RULE_BAND, event.getRuleBand());
+        storeIfPresent(hashOps, key, FIELD_RULE_MATCHES, serializeList(event.getRuleMatches()));
+        storeIfPresent(hashOps, key, FIELD_RULE_VERSION, event.getRuleVersion());
+        storeIfPresent(hashOps, key, FIELD_FEATURES, serializeMap(event.getFeatures()));
         storeIfPresent(hashOps, key, FIELD_SENDER_USER_ID, event.getSenderUserId());
         storeIfPresent(hashOps, key, FIELD_RECEIVER_USER_ID, event.getReceiverUserId());
         storeIfPresent(hashOps, key, FIELD_MERCHANT_ID, event.getMerchantId());
         storeIfPresent(hashOps, key, FIELD_AMOUNT, event.getAmount());
         storeIfPresent(hashOps, key, FIELD_CURRENCY, event.getCurrency());
         redisTemplate.expire(key, AGGREGATION_TTL);
-        tryFinalize(event.getTransactionId());
-    }
 
-    public void handleBlacklistEvent(BlacklistCheckEvent event) {
-        String key = aggregateKey(event.getTransactionId());
-        HashOperations<String, Object, Object> hashOps = redisTemplate.opsForHash();
-        hashOps.put(key, FIELD_BLACKLIST_SCORE, String.valueOf(event.getBlacklistScore()));
-        hashOps.put(key, FIELD_BLACKLIST_MATCHES, serializeList(event.getMatchedEntries()));
-        redisTemplate.expire(key, AGGREGATION_TTL);
-        tryFinalize(event.getTransactionId());
+        if ("SAFE".equalsIgnoreCase(event.getRuleBand())) {
+            finalizeDecision(transactionId, FinalDecisionInput.fromRule(event, "RULE_SAFE", FraudDecision.ALLOW));
+        } else if ("RISK".equalsIgnoreCase(event.getRuleBand())) {
+            finalizeDecision(transactionId, FinalDecisionInput.fromRule(event, "RULE_RISK", FraudDecision.BLOCK));
+        }
     }
 
     public void handleMlEvent(MlScoreEvent event) {
-        String key = aggregateKey(event.getTransactionId());
-        HashOperations<String, Object, Object> hashOps = redisTemplate.opsForHash();
-        hashOps.put(key, FIELD_ML_SCORE, String.valueOf(event.getMlScore()));
-        redisTemplate.expire(key, AGGREGATION_TTL);
-        tryFinalize(event.getTransactionId());
-    }
-
-    private void tryFinalize(String transactionId) {
-        String key = aggregateKey(transactionId);
-        Map<Object, Object> values = redisTemplate.opsForHash().entries(key);
-        if (!values.keySet().containsAll(
-                List.of(FIELD_RULE_SCORE, FIELD_BLACKLIST_SCORE, FIELD_ML_SCORE)
-        )) {
+        String transactionId = event.getTransactionId();
+        if (transactionId == null) {
             return;
         }
 
+        HashOperations<String, Object, Object> hashOps = redisTemplate.opsForHash();
+        String key = aggregateKey(transactionId);
+        hashOps.put(key, FIELD_ML_SCORE, String.valueOf(event.getMlScore()));
+        storeIfPresent(hashOps, key, FIELD_MODEL_VERSION, event.getModelVersion());
+        redisTemplate.expire(key, AGGREGATION_TTL);
+
+        Map<Object, Object> values = hashOps.entries(key);
+        String band = values.get(FIELD_RULE_BAND) != null ? values.get(FIELD_RULE_BAND).toString() : null;
+        if (!"GRAY".equalsIgnoreCase(band)) {
+            return;
+        }
+
+        double mlScore = parseDouble(values.get(FIELD_ML_SCORE));
+        String mlBand = mlScore < 0.30 ? "SAFE" : (mlScore > 0.70 ? "RISK" : "GRAY");
+        FraudDecision decision = mlScore < 0.30
+                ? FraudDecision.ALLOW
+                : (mlScore > 0.70 ? FraudDecision.BLOCK : FraudDecision.HOLD);
+        String reason = mlScore < 0.30
+                ? "ML_SAFE"
+                : (mlScore > 0.70 ? "ML_RISK" : "ML_GRAY");
+
+        finalizeDecision(transactionId, FinalDecisionInput.fromMl(decision, reason, mlBand));
+    }
+
+    private void finalizeDecision(String transactionId, FinalDecisionInput input) {
         String finalizeKey = "fraud:finalized:" + transactionId;
         Boolean first = redisTemplate.opsForValue()
-                .setIfAbsent(finalizeKey, "1", Duration.ofMinutes(1));
+                .setIfAbsent(finalizeKey, "1", Duration.ofMinutes(2));
         if (first == null || !first) {
             return;
         }
 
-        double ruleScore = parseDouble(values.get(FIELD_RULE_SCORE));
-        double blacklistScore = parseDouble(values.get(FIELD_BLACKLIST_SCORE));
-        double mlScore = parseDouble(values.get(FIELD_ML_SCORE));
+        Map<Object, Object> values = redisTemplate.opsForHash().entries(aggregateKey(transactionId));
+        Map<String, Object> features = deserializeMap(values.get(FIELD_FEATURES));
 
-        double finalScore = (ruleScore * 0.5) + (blacklistScore * 0.3) + (mlScore * 0.2);
-        List<String> ruleMatches = deserializeList(values.get(FIELD_RULE_MATCHES));
-        List<String> blacklistMatches = deserializeList(values.get(FIELD_BLACKLIST_MATCHES));
-        int riskScore = (int) parseDouble(values.get(FIELD_RISK_SCORE));
-        String riskLevel = values.get(FIELD_RISK_LEVEL) != null
-                ? values.get(FIELD_RISK_LEVEL).toString()
-                : null;
-        List<String> triggeredRules = deserializeList(values.get(FIELD_TRIGGERED_RULES));
-        List<String> hardStopMatches = deserializeList(values.get(FIELD_HARD_STOP_MATCHES));
-        String hardStopDecision = values.get(FIELD_HARD_STOP_DECISION) != null
-                ? values.get(FIELD_HARD_STOP_DECISION).toString()
-                : null;
-        Long senderUserId = parseLong(values.get(FIELD_SENDER_USER_ID));
-        Long receiverUserId = parseLong(values.get(FIELD_RECEIVER_USER_ID));
-        Long merchantId = parseLong(values.get(FIELD_MERCHANT_ID));
-        java.math.BigDecimal amount = parseBigDecimal(values.get(FIELD_AMOUNT));
-        String currency = values.get(FIELD_CURRENCY) != null
-                ? values.get(FIELD_CURRENCY).toString()
-                : null;
+        Long senderUserId = parseLong(values.get(FIELD_SENDER_USER_ID), features, "senderUserId");
+        Long receiverUserId = parseLong(values.get(FIELD_RECEIVER_USER_ID), features, "receiverUserId");
+        Long merchantId = parseLong(values.get(FIELD_MERCHANT_ID), features, "merchantId");
+        BigDecimal amount = parseBigDecimal(values.get(FIELD_AMOUNT), features, "amount");
+        String currency = parseString(values.get(FIELD_CURRENCY), features, "currency");
+        String country = parseString(values.get(FIELD_COUNTRY), features, "senderAccountCountry");
 
-        FraudDecision decision = decide(finalScore, blacklistScore, ruleMatches, hardStopDecision);
+        boolean blacklistHit = input.blacklistHit != null ? input.blacklistHit : parseBoolean(values.get(FIELD_BLACKLIST_HIT));
+        Double ruleScore = input.ruleScore != null ? input.ruleScore : parseDouble(values.get(FIELD_RULE_SCORE));
+        String ruleBand = input.ruleBand != null ? input.ruleBand : parseString(values.get(FIELD_RULE_BAND), null, null);
+        List<String> ruleMatches = input.ruleMatches != null ? input.ruleMatches : deserializeList(values.get(FIELD_RULE_MATCHES));
+        Double mlScore = input.mlScore != null ? input.mlScore : parseDouble(values.get(FIELD_ML_SCORE));
+        String mlBand = input.mlBand;
+        String modelVersion = input.modelVersion != null ? input.modelVersion : parseString(values.get(FIELD_MODEL_VERSION), null, null);
+        Integer ruleVersion = input.ruleVersion != null ? input.ruleVersion : parseInt(values.get(FIELD_RULE_VERSION));
 
         FraudFinalDecisionEvent out = new FraudFinalDecisionEvent(
                 transactionId,
+                senderUserId,
                 senderUserId,
                 receiverUserId,
                 merchantId,
                 amount,
                 currency,
-                decision,
+                country,
+                serializeMap(features),
+                blacklistHit,
                 ruleScore,
-                blacklistScore,
-                mlScore,
-                finalScore,
+                ruleBand,
                 ruleMatches,
-                blacklistMatches,
-                riskScore,
-                riskLevel,
-                triggeredRules,
-                hardStopMatches,
-                hardStopDecision,
+                mlScore,
+                mlBand,
+                input.finalDecision,
+                input.decisionReason,
+                modelVersion,
+                ruleVersion,
                 Instant.now()
         );
 
+        persistDecision(out);
         kafkaTemplate.send(OUT_TOPIC, transactionId, out);
-        redisTemplate.delete(key);
+        redisTemplate.delete(aggregateKey(transactionId));
     }
 
-    private FraudDecision decide(
-            double finalScore,
-            double blacklistScore,
-            List<String> ruleMatches,
-            String hardStopDecision
-    ) {
-        if ("BLOCK".equalsIgnoreCase(hardStopDecision)) {
-            return FraudDecision.BLOCK;
-        }
-        if (ruleMatches.contains("absolute-high-amount")) {
-            return FraudDecision.BLOCK;
-        }
-        if (blacklistScore >= 1.0) {
-            return FraudDecision.BLOCK;
-        }
-        if ("REVIEW".equalsIgnoreCase(hardStopDecision)) {
-            return FraudDecision.HOLD;
-        }
-        if (finalScore >= 0.8) {
-            return FraudDecision.BLOCK;
-        }
-        if (finalScore >= 0.5) {
-            return FraudDecision.HOLD;
-        }
-        return FraudDecision.ALLOW;
+    private void persistDecision(FraudFinalDecisionEvent event) {
+        FraudDecisionRecord record = new FraudDecisionRecord();
+        record.setTransactionId(event.getTransactionId());
+        record.setAccountId(event.getAccountId());
+        record.setAmount(event.getAmount());
+        record.setCountry(event.getCountry());
+        record.setFeaturesJson(event.getFeaturesJson());
+        record.setBlacklistHit(event.isBlacklistHit());
+        record.setRuleScore(event.getRuleScore());
+        record.setRuleBand(event.getRuleBand());
+        record.setRuleMatches(serializeList(event.getRuleMatches()));
+        record.setMlScore(event.getMlScore());
+        record.setMlBand(event.getMlBand());
+        record.setFinalDecision(event.getFinalDecision() != null ? event.getFinalDecision().name() : null);
+        record.setDecisionReason(event.getDecisionReason());
+        record.setModelVersion(event.getModelVersion());
+        record.setRuleVersion(event.getRuleVersion());
+        record.setCreatedAt(event.getDecidedAt() != null ? event.getDecidedAt() : Instant.now());
+        decisionRepository.save(record);
+    }
+
+    private void storeTransactionSnapshot(String transactionId, Map<String, Object> transaction) {
+        HashOperations<String, Object, Object> hashOps = redisTemplate.opsForHash();
+        String key = aggregateKey(transactionId);
+        storeIfPresent(hashOps, key, FIELD_FEATURES, serializeMap(transaction));
+        storeIfPresent(hashOps, key, FIELD_SENDER_USER_ID, transaction.get("senderUserId"));
+        storeIfPresent(hashOps, key, FIELD_RECEIVER_USER_ID, transaction.get("receiverUserId"));
+        storeIfPresent(hashOps, key, FIELD_MERCHANT_ID, transaction.get("merchantId"));
+        storeIfPresent(hashOps, key, FIELD_AMOUNT, transaction.get("amount"));
+        storeIfPresent(hashOps, key, FIELD_CURRENCY, transaction.get("currency"));
+        storeIfPresent(hashOps, key, FIELD_COUNTRY, transaction.get("senderAccountCountry"));
+        redisTemplate.expire(key, AGGREGATION_TTL);
     }
 
     private String serializeList(List<String> values) {
@@ -194,14 +243,33 @@ public class FraudOrchestrationService {
         }
     }
 
+    private String serializeMap(Map<String, Object> values) {
+        try {
+            return objectMapper.writeValueAsString(values == null ? Collections.emptyMap() : values);
+        } catch (Exception e) {
+            return "{}";
+        }
+    }
+
     private List<String> deserializeList(Object raw) {
         if (raw == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         try {
             return objectMapper.readValue(raw.toString(), new TypeReference<List<String>>() {});
         } catch (Exception e) {
-            return Collections.emptyList();
+            return List.of();
+        }
+    }
+
+    private Map<String, Object> deserializeMap(Object raw) {
+        if (raw == null) {
+            return Collections.emptyMap();
+        }
+        try {
+            return objectMapper.readValue(raw.toString(), new TypeReference<Map<String, Object>>() {});
+        } catch (Exception e) {
+            return Collections.emptyMap();
         }
     }
 
@@ -216,26 +284,63 @@ public class FraudOrchestrationService {
         }
     }
 
-    private Long parseLong(Object value) {
-        if (value == null) {
+    private Long parseLong(Object value, Map<String, Object> features, String fallbackKey) {
+        if (value != null) {
+            try {
+                return Long.parseLong(value.toString());
+            } catch (NumberFormatException ignored) {
+            }
+        }
+        Object fallback = features != null ? features.get(fallbackKey) : null;
+        if (fallback == null) {
             return null;
         }
         try {
-            return Long.parseLong(value.toString());
+            return Long.parseLong(fallback.toString());
         } catch (NumberFormatException e) {
             return null;
         }
     }
 
-    private java.math.BigDecimal parseBigDecimal(Object value) {
+    private BigDecimal parseBigDecimal(Object value, Map<String, Object> features, String fallbackKey) {
+        Object raw = value;
+        if (raw == null && features != null) {
+            raw = features.get(fallbackKey);
+        }
+        if (raw == null) {
+            return null;
+        }
+        try {
+            return new BigDecimal(raw.toString());
+        } catch (NumberFormatException e) {
+            return null;
+        }
+    }
+
+    private String parseString(Object value, Map<String, Object> features, String fallbackKey) {
+        Object raw = value;
+        if (raw == null && features != null) {
+            raw = features.get(fallbackKey);
+        }
+        return raw != null ? raw.toString() : null;
+    }
+
+    private Integer parseInt(Object value) {
         if (value == null) {
             return null;
         }
         try {
-            return new java.math.BigDecimal(value.toString());
+            return Integer.parseInt(value.toString());
         } catch (NumberFormatException e) {
             return null;
         }
+    }
+
+    private boolean parseBoolean(Object value) {
+        if (value == null) {
+            return false;
+        }
+        return Boolean.parseBoolean(value.toString());
     }
 
     private void storeIfPresent(
@@ -251,5 +356,87 @@ public class FraudOrchestrationService {
 
     private String aggregateKey(String transactionId) {
         return "fraud:aggregate:" + transactionId;
+    }
+
+    private static final class FinalDecisionInput {
+        private final FraudDecision finalDecision;
+        private final String decisionReason;
+        private final Boolean blacklistHit;
+        private final Double ruleScore;
+        private final String ruleBand;
+        private final List<String> ruleMatches;
+        private final Double mlScore;
+        private final String mlBand;
+        private final String modelVersion;
+        private final Integer ruleVersion;
+
+        private FinalDecisionInput(
+                FraudDecision finalDecision,
+                String decisionReason,
+                Boolean blacklistHit,
+                Double ruleScore,
+                String ruleBand,
+                List<String> ruleMatches,
+                Double mlScore,
+                String mlBand,
+                String modelVersion,
+                Integer ruleVersion
+        ) {
+            this.finalDecision = finalDecision;
+            this.decisionReason = decisionReason;
+            this.blacklistHit = blacklistHit;
+            this.ruleScore = ruleScore;
+            this.ruleBand = ruleBand;
+            this.ruleMatches = ruleMatches;
+            this.mlScore = mlScore;
+            this.mlBand = mlBand;
+            this.modelVersion = modelVersion;
+            this.ruleVersion = ruleVersion;
+        }
+
+        static FinalDecisionInput fromBlacklist(BlacklistCheckEvent event) {
+            return new FinalDecisionInput(
+                    FraudDecision.BLOCK,
+                    "BLACKLIST",
+                    true,
+                    null,
+                    null,
+                    null,
+                    null,
+                    null,
+                    null,
+                    null
+            );
+        }
+
+        static FinalDecisionInput fromRule(RuleEvaluationEvent event, String reason, FraudDecision decision) {
+            return new FinalDecisionInput(
+                    decision,
+                    reason,
+                    false,
+                    event.getRuleScore(),
+                    event.getRuleBand(),
+                    event.getRuleMatches(),
+                    null,
+                    null,
+                    null,
+                    event.getRuleVersion()
+            );
+        }
+
+        static FinalDecisionInput fromMl(FraudDecision decision, String reason, String mlBand) {
+            return new FinalDecisionInput(
+                    decision,
+                    reason,
+                    false,
+                    null,
+                    "GRAY",
+                    null,
+                    null,
+                    mlBand,
+                    null,
+                    null
+            );
+        }
     }
 }
